--- a/Host/package.json
+++ b/Host/package.json
@@ -4,16 +4,30 @@
   "description": "WebRTC Remote Desktop Stream Application",
   "main": "index.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
   "author": "H.Ragul",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^33.2.1"
+    "electron": "^33.2.1",
+    "electron-builder": "^25.1.8"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "socket.io": "^4.8.1"
+  },
+  "build": {
+    "appId": "com.teleport.app",
+    "productName": "Teleport",
+    "win": {
+      "target": "nsis",
+      "icon": "icon.ico"
+    },
+    "directories": {
+      "output": "build"
+    }
   }
 }
