--- a/Controller/pyvenv.cfg
+++ b/Controller/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\D\AppData\Local\Programs\Python\Python313
+home = C:\Python312
 include-system-site-packages = false
-version = 3.13.1
-executable = C:\Users\D\AppData\Local\Programs\Python\Python313\python.exe
-command = C:\Users\D\AppData\Local\Programs\Python\Python313\python.exe -m venv C:\Users\D\Documents\Teleport\Controller
+version = 3.12.6
+executable = C:\Python312\python.exe
+command = C:\Python312\python.exe -m venv D:\Ragul_Projects\Teleport\Controller
